--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por Lorenzo Meni Rodrigues | Dia 10 de Novembro de 2023</p>
+        <p>Desenvolvido por Lorenzo Meni Rodrigues |  10 de Novembro de 2023</p>
     </footer>
 </body>
 </html>
